# transporter

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Jenkinsfile  LICENSE  README.md  transporter.sln
docs/: _buffer_8h_source.html  _i_byte_input_8h_source.html  _i_byte_output_8h_source.html  _i_byte_stream_8h_source.html  _i_data_input_8h_source.html  _i_data_output_8h_source.html  _i_network_message_8h_source.html  _memory_stream_8h_source.html  _network_stream_8h_source.html  _transaction_exception_8h_source.html  _transporter_8h_source.html  _transporter_adapter_boost_asio_tcp_socket_8h_source.html  _transporter_adapter_boost_asio_udp_socket_8h_source.html  _transporter_adapter_qt_q_abstract_socket_8h_source.html  _transporter_adapter_sfml_tcp_socket_8h_source.html  _transporter_adapter_sfml_udp_socket_8h_source.html  _unknown_message_8h_source.html  annotated.html  annotated_dup.js  classes.html  classtransporter_1_1adapters_1_1boost_1_1asio_1_1_transporter_adapter_boost_asio_tcp_socket-members.html  classtransporter_1_1adapters_1_1boost_1_1asio_1_1_transporter_adapter_boost_asio_tcp_socket.html  classtransporter_1_1adapters_1_1boost_1_1asio_1_1_transporter_adapter_boost_asio_tcp_socket.js  classtransporter_1_1adapters_1_1boost_1_1asio_1_1_transporter_adapter_boost_asio_udp_socket-members.html  classtransporter_1_1adapters_1_1boost_1_1asio_1_1_transporter_adapter_boost_asio_udp_socket.html  classtransporter_1_1adapters_1_1boost_1_1asio_1_1_transporter_adapter_boost_asio_udp_socket.js  classtransporter_1_1adapters_1_1qt_1_1_transporter_adapter_qt_q_abstract_socket-members.html  classtransporter_1_1adapters_1_1qt_1_1_transporter_adapter_qt_q_abstract_socket.html  classtransporter_1_1adapters_1_1qt_1_1_transporter_adapter_qt_q_abstract_socket.js  classtransporter_1_1adapters_1_1sfml_1_1_transporter_adapter_sfml_tcp_socket-members.html  classtransporter_1_1adapters_1_1sfml_1_1_transporter_adapter_sfml_tcp_socket.html  classtransporter_1_1adapters_1_1sfml_1_1_transporter_adapter_sfml_tcp_socket.js  classtransporter_1_1adapters_1_1sfml_1_1_transporter_adapter_sfml_udp_socket-members.html  classtransporter_1_1adapters_1_1sfml_1_1_transporter_adapter_sfml_udp_socket.html  classtransporter_1_1adapters_1_1sfml_1_1_transporter_adapter_sfml_udp_socket.js  classtransporter_1_1data_1_1_buffer-members.html  classtransporter_1_1data_1_1_buffer.html  classtransporter_1_1data_1_1_buffer.js  classtransporter_1_1data_1_1io_1_1_i_byte_input-members.html  classtransporter_1_1data_1_1io_1_1_i_byte_input.html  (+41 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js
examples/transporter.examples.client/: CMakeLists.txt  TestMessage.cpp  TestMessage.h  main.cpp  transporter.examples.client.vcxproj  transporter.examples.client.vcxproj.filters
examples/transporter.examples.server/: CMakeLists.txt  main.cpp  transporter.examples.server.vcxproj
transporter/: Buffer.cpp  Buffer.h  CMakeLists.txt  IByteInput.h  IByteOutput.h  IByteStream.h  IBytesInput.h  IBytesOutput.h  IBytesStream.h  IDataInput.h  IDataOutput.h  INetworkMessage.h  MemoryStream.cpp  MemoryStream.h  NetworkStream.cpp  NetworkStream.h  TransactionException.cpp  TransactionException.h  Transporter.h  TransporterAdapterBoostAsioTcpSocket.cpp  TransporterAdapterBoostAsioTcpSocket.h  TransporterAdapterBoostAsioUdpSocket.cpp  TransporterAdapterBoostAsioUdpSocket.h  TransporterAdapterQtQAbstractSocket.cpp  TransporterAdapterQtQAbstractSocket.h  TransporterAdapterSfmlTcpSocket.cpp  TransporterAdapterSfmlTcpSocket.h  TransporterAdapterSfmlUdpSocket.cpp  TransporterAdapterSfmlUdpSocket.h  TransporterInterfaceQt.cpp  TransporterInterfaceQt.h  TransporterInterfaceQtQIODevice.cpp  TransporterInterfaceQtQIODevice.h  TransporterInterfaceSfmlTcpSocket.cpp  TransporterInterfaceSfmlTcpSocket.h  TransporterInterfaceSfmlUdpSocket.cpp  TransporterInterfaceSfmlUdpSocket.h  UnknownMessage.cpp  UnknownMessage.h  ssize_t.h  (+3 more)
transporter.tests/: Buffer_tests.cpp  Buffer_tests.h  CMakeLists.txt  MemoryStream_tests.cpp  NetworkStream_tests.cpp  TestMessage.cpp  TestMessage.h  transporter.tests.vcxproj  transporter.tests.vcxproj.filters
