set(TRANSPORTER_EXAMPLES_CLIENT_SRC
	main.cpp
	TestMessage.cpp
)

find_package(Boost REQUIRED COMPONENTS system)
find_path(BOOST_INCLUDE_DIR boost/asio.hpp)

add_executable(${TRANSPORTER_EXAMPLES_CLIENT_TARGET} ${TRANSPORTER_EXAMPLES_CLIENT_SRC})
target_include_directories(${TRANSPORTER_EXAMPLES_CLIENT_TARGET} PRIVATE ${CMAKE_SOURCE_DIR} ${BOOST_INCLUDE_DIR})
target_link_libraries(${TRANSPORTER_EXAMPLES_CLIENT_TARGET} ${TRANSPORTER_TARGET} ${Boost_LIBRARIES})
